Updated some files, dependencies, and added the beginnings of particle text.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <app-p-intro *ngSwitchCase="'Introduction'"></app-p-intro>
   <app-p-experiment *ngSwitchCase="'Experiment'"></app-p-experiment>
   <app-p-rain *ngSwitchCase="'Pixel Rain'"></app-p-rain>
+  <app-p-text *ngSwitchCase="'Particle Text'"></app-p-text>
 </ng-container>
 </div>
 
