Added modification to dynamically set the size of the canvas.

--- a/src/app/p-rain/p-rain.component.scss
+++ b/src/app/p-rain/p-rain.component.scss
@@ -1,12 +1,12 @@
 #Canvas {
-    border: 2px solid white;
+    border: 0px solid white;
     top: 50%;
     left: 50%;
     position: relative;
 
     // reaching-out
-    width: 501px;
-    height: 672px;
+    // width: 501px;
+    // height: 672px;
 
     // disturbed
     // width: 500px;
