Added ng-bootstrap for tooltip functionality

--- a/src/app/p-experiment/p-experiment.component.html
+++ b/src/app/p-experiment/p-experiment.component.html
@@ -4,7 +4,7 @@
 
       <div class="form-group col-12">
         <label class="nav-link" for="AverageRangeInput">
-          <span class="bi bi-info-circle"></span>&nbsp;
+          <span class="bi bi-info-circle" placement="right" ngbTooltip="Tooltip on top"></span>&nbsp;
           Gray Modifier: {{averageModifier}}
         </label>
         <input id="AverageRangeInput" type="range" class="form-control-range" min="-100" max="100"
