--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -1,18 +1,21 @@
-<!-- <div id="SideBar" class="bg-info text-white col-2">
+<div id="SideBar" class="bg-info text-white col-2">
   <form>
     <div class="form-row">
 
-      <div class="form-group col-12">
-        <label class="nav-link" for="AverageRangeInput">
-          <input class="form-check-input" type="checkbox" id="AverageUsedWithColorCB" (change)="toggleAverageUsedFlag()" #AverageUsedWithColorCB>
-          <span class="bi bi-info-circle" placement="right" ngbTooltip="Tooltip on top"></span>&nbsp;
-          Gray Modifier: {{averageModifier}}
+      <div class="form-inline form-group col-12">
+        <label class="nav-link" for="PresetDropdown">
+          <input class="form-check-input" type="checkbox" id="UsePresetCB" (change)="toggleUsePresetFlag()" #UsePresetCB>
+          <span class="bi bi-info-circle" placement="right" ngbTooltip="Select the preset option of your choice."></span>&nbsp;
         </label>
-        <input id="AverageRangeInput" type="range" class="form-control-range" min="-100" max="100"
-          (change)="updateAverageModifier(AverageRangeInput.value)" value="0" #AverageRangeInput>
+        <div ngbDropdown class="d-inline-block">
+          <button type="button" class="btn btn-outline-dark" id="PresetDropdown" ngbDropdownToggle>Presets</button>
+          <div ngbDropdownMenu aria-labelledby="PresetDropdown">
+            <button type="button" ngbDropdownItem *ngFor="let settingsObj of rainParticleSettings; let i = index" (click)="selectPresetRainParticleSettings(i)">{{settingsObj.name}}</button>
+          </div>
+        </div>
       </div>
 
-      <div class="form-group col-12">
+      <!-- <div class="form-group col-12">
         <label class="nav-link" for="RedRangeInput">
           <span class="bi bi-info-circle"></span>&nbsp;
           Red Modifier: {{redModifier}}
@@ -37,10 +40,10 @@
         </label>
         <input id="BlueRangeInput" type="range" class="form-control-range" min="-100" max="100"
           (change)="updateBlueModifier(BlueRangeInput.value)" value="0" #BlueRangeInput>
-      </div>
+      </div> -->
 
     </div>
-    <fieldset class="form-group col-12">
+    <!-- <fieldset class="form-group col-12">
       <div class="form-row col-12">
 
         <div class="form-check col-12">
@@ -68,8 +71,8 @@
         </div>
 
       </div>
-    </fieldset>
+    </fieldset> -->
   </form>
-</div> -->
+</div>
 
 <canvas id="Canvas" #Canvas></canvas>
