Added direction selection and functionality

--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -13,57 +13,72 @@
         </select>
       </div>
 
-      <!-- <div class="form-group col-12">
-        <label class="nav-link" for="RedRangeInput">
-          <span class="bi bi-info-circle"></span>&nbsp;
-          Red Modifier: {{redModifier}}
-        </label>
-        <input id="RedRangeInput" type="range" class="form-control-range" min="-100" max="100"
-          (change)="updateRedModifier(RedRangeInput.value)" value="0" #RedRangeInput>
-      </div>
-
-      <div class="form-group col-12">
-        <label class="nav-link" for="GreenRangeInput">
-          <span class="bi bi-info-circle"></span>&nbsp;
-          Green Modifier: {{greenModifier}}
-        </label>
-        <input id="GreenRangeInput" type="range" class="form-control-range" min="-100" max="100"
-          (change)="updateGreenModifier(GreenRangeInput.value)" value="0" #GreenRangeInput>
-      </div>
-
-      <div class="form-group col-12">
-        <label class="nav-link" for="BlueRangeInput">
-          <span class="bi bi-info-circle"></span>&nbsp;
-          Blue Modifier: {{blueModifier}}
-        </label>
-        <input id="BlueRangeInput" type="range" class="form-control-range" min="-100" max="100"
-          (change)="updateBlueModifier(BlueRangeInput.value)" value="0" #BlueRangeInput>
-      </div> -->
-
     </div>
-    <fieldset class="form-group col-12">
-      <div class="form-row col-12">
+    <div class="form-group border border-dark">
+      <fieldset class="form-group col-12 border">
+        <div class="form-row col-12">
 
-        <div class="form-check col-6">
-          <input id="BlackAndWhiteRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectBlackAndWhite()">
-          <label class="form-check-label" for="OriginalRadio">
-            &nbsp;Black and White&nbsp;
-            <span class="bi bi-info-circle"></span>&nbsp;
-          </label>
+          <div class="form-check col-12">
+            <input id="BlackAndWhiteRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomBlackAndWhite()">
+            <label class="form-check-label" for="OriginalRadio">
+              &nbsp;Black and White&nbsp;
+              <span class="bi bi-info-circle"></span>&nbsp;
+            </label>
+          </div>
+
+          <div class="form-check col-12">
+            <input id="MappedColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectCustomMappedColors()">
+            <label class="form-check-label" for="InvertRadio">
+              &nbsp;Color&nbsp;
+              <span class="bi bi-info-circle"></span>&nbsp;
+            </label>
+          </div>
+
         </div>
+      </fieldset>
+      <div class="form-row">
 
-        <div class="form-check col-6">
-          <input id="MappedColorRadio" class="form-check-input" name="ColorRadioGroup" type="radio" (change)="selectMappedColors()">
-          <label class="form-check-label" for="InvertRadio">
-            &nbsp;Color&nbsp;
-            <span class="bi bi-info-circle"></span>&nbsp;
+        <div class="form-inline form-group col-12">
+          <label class="nav-link col-2" for="DirectionDropdown">
+            <span class="bi bi-info-circle" placement="right" ngbTooltip="Select the direction for the particles to flow."></span>&nbsp;
           </label>
+          <select id="DirectionDropdown" class="form-select col-10" (change)="selectCustomDirection($event)">
+            <option *ngFor="let direction of availableDirections" [selected]="direction == customRainParticleSettings.direction" [value]="direction">{{direction}}</option>
+          </select>
         </div>
 
       </div>
-    </fieldset>
+    </div>
 
   </form>
 </div>
+
+<!-- <div class="form-group col-12">
+  <label class="nav-link" for="RedRangeInput">
+    <span class="bi bi-info-circle"></span>&nbsp;
+    Red Modifier: {{redModifier}}
+  </label>
+  <input id="RedRangeInput" type="range" class="form-control-range" min="-100" max="100"
+    (change)="updateRedModifier(RedRangeInput.value)" value="0" #RedRangeInput>
+</div>
+
+<div class="form-group col-12">
+  <label class="nav-link" for="GreenRangeInput">
+    <span class="bi bi-info-circle"></span>&nbsp;
+    Green Modifier: {{greenModifier}}
+  </label>
+  <input id="GreenRangeInput" type="range" class="form-control-range" min="-100" max="100"
+    (change)="updateGreenModifier(GreenRangeInput.value)" value="0" #GreenRangeInput>
+</div>
+
+<div class="form-group col-12">
+  <label class="nav-link" for="BlueRangeInput">
+    <span class="bi bi-info-circle"></span>&nbsp;
+    Blue Modifier: {{blueModifier}}
+  </label>
+  <input id="BlueRangeInput" type="range" class="form-control-range" min="-100" max="100"
+    (change)="updateBlueModifier(BlueRangeInput.value)" value="0" #BlueRangeInput>
+</div> -->
+
 
 <canvas id="Canvas" #Canvas></canvas>
