--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -51,9 +51,18 @@
           <label class="nav-link col-2" for="CompositeOperationOptionsDropdown">
             <span class="bi bi-info-circle" placement="right" ngbTooltip="Select composite operation option."></span>&nbsp;
           </label>
-          <select id="CompositeOperationOptionsDropdown" class="form-select col-10" (change)="selectGlobalCompositeOperationOptions($event)">
+          <select id="CompositeOperationOptionsDropdown" class="form-select col-10" (change)="selectCustomGlobalCompositeOperationOptions($event)">
             <option *ngFor="let gcoOption of globalCompositeOperationOptions" [selected]="gcoOption == customRainParticleSettings.globalCompositeOperationOptions" [value]="gcoOption">{{gcoOption}}</option>
           </select>
+        </div>
+
+        <div class="form-group col-12">
+          <label class="nav-link" for="GreenRangeInput">
+            <span class="bi bi-info-circle"></span>&nbsp;
+            Particle Size: {{customRainParticleSettings.sizeModifier}}
+          </label>
+          <input id="SizeRangeInput" type="range" class="form-control-range" min="1" max="100" step="0.5"
+            (change)="selectCustomSize(SizeRangeInput.value)" value="0" #SizeRangeInput>
         </div>
 
       </div>
