--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -57,12 +57,21 @@
         </div>
 
         <div class="form-group col-12">
-          <label class="nav-link" for="GreenRangeInput">
+          <label class="nav-link" for="SizeRangeInput">
             <span class="bi bi-info-circle"></span>&nbsp;
             Particle Size: {{customRainParticleSettings.sizeModifier}}
           </label>
           <input id="SizeRangeInput" type="range" class="form-control-range" min="1" max="100" step="0.5"
             (change)="selectCustomSize(SizeRangeInput.value)" value="0" #SizeRangeInput>
+        </div>
+
+        <div class="form-group col-12">
+          <label class="nav-link" for="SpeedRangeInput">
+            <span class="bi bi-info-circle"></span>&nbsp;
+            Particle Speed: {{customRainParticleSettings.velocityModifier}}
+          </label>
+          <input id="SpeedRangeInput" type="range" class="form-control-range" min="0" max="100" step="0.05"
+            (change)="selectCustomSpeed(SpeedRangeInput.value)" value="0" #SpeedRangeInput>
         </div>
 
       </div>
