--- a/src/app/p-rain/p-rain.component.html
+++ b/src/app/p-rain/p-rain.component.html
@@ -74,38 +74,18 @@
             (change)="selectCustomSpeed(SpeedRangeInput.value)" value="0" #SpeedRangeInput>
         </div>
 
+        <div class="form-inline form-group col-12">
+          <label class="nav-link col-2" for="ClearCanvasCB">
+            <span class="bi bi-info-circle" placement="right" ngbTooltip="Select to clear the canvas each frame."></span>&nbsp;
+          </label>
+          <input class="form-check-input" type="checkbox" id="ClearCanvasCB" (change)="toggleClearCanvasFlag()" #ClearCanvasCB>
+          Clear Previous Frame
+        </div>
+
       </div>
     </div>
 
   </form>
 </div>
-
-<!-- <div class="form-group col-12">
-  <label class="nav-link" for="RedRangeInput">
-    <span class="bi bi-info-circle"></span>&nbsp;
-    Red Modifier: {{redModifier}}
-  </label>
-  <input id="RedRangeInput" type="range" class="form-control-range" min="-100" max="100"
-    (change)="updateRedModifier(RedRangeInput.value)" value="0" #RedRangeInput>
-</div>
-
-<div class="form-group col-12">
-  <label class="nav-link" for="GreenRangeInput">
-    <span class="bi bi-info-circle"></span>&nbsp;
-    Green Modifier: {{greenModifier}}
-  </label>
-  <input id="GreenRangeInput" type="range" class="form-control-range" min="-100" max="100"
-    (change)="updateGreenModifier(GreenRangeInput.value)" value="0" #GreenRangeInput>
-</div>
-
-<div class="form-group col-12">
-  <label class="nav-link" for="BlueRangeInput">
-    <span class="bi bi-info-circle"></span>&nbsp;
-    Blue Modifier: {{blueModifier}}
-  </label>
-  <input id="BlueRangeInput" type="range" class="form-control-range" min="-100" max="100"
-    (change)="updateBlueModifier(BlueRangeInput.value)" value="0" #BlueRangeInput>
-</div> -->
-
 
 <canvas id="Canvas" #Canvas></canvas>
